# docling_spatial_pdfs

./: .gitignore  LICENSE  PROGRESS.md  README.md  gazette_docling_pipeline.ipynb  gazette_docling_pipeline_spatial.ipynb  gold.md  pyproject.toml  requirements.txt  spatial_reorder_changelog.md  test_f13.py  test_f13_helpers.py
analysis/: kenya-gazette-library-ideation-prompt.md  schema design analysis 01.md
docs/: data-quality-confidence-scoring.md  envelope-field-tree.json  known-issues.md  library-contract-v1.md  library-roadmap-v1.md  spatial_reorder_changelog.md
examples/: quickstart.ipynb
kenya_gazette_parser/: __init__.py  __version__.py  corrigenda.py  envelope_builder.py  identity.py  io.py  masthead.py  pipeline.py  scoring.py  spatial.py  splitting.py  trailing.py
output/: _confidence_report.csv
scripts/: _f21_tc10_log.txt  _f21_tc11_log.txt  _f21_tc1_log.txt  _f21_tc2_log.txt  _f21_tc3_log.txt  _f21_tc4_log.txt  _f21_tc5_tc6_log.txt  _f21_tc7_log.txt  _f21_tc8_log.txt  _f21_tc9_log.txt  f17_regression_check.py  f17_smoke_tests.py  f18_degraded.py  f18_edge_cases.py  f18_round_trip.py  f18_validate_real_notice.py  f19_corrigendum_warnings.py  f19_degraded.py  f19_round_trip.py  f19_run_pipeline.py  f19_t1_t2.py  f20_grep_moved_defs.py  f20_grep_notebook.py  f20_patch_cell29.py  f20_rewrite_notebook.py  f20_run_pipeline.py  f20_tc1_tc2_tc3_tc6.py  f20_tc4_d2.py  f21_rewrite_notebook.py  f21_tc10_gate3.py  f21_tc11_grep_notebook.py  f21_tc1_parse_file_happy.py  f21_tc2_parse_bytes_parity.py  f21_tc3_write_envelope_default.py  f21_tc4_write_envelope_selective.py  f21_tc5_tc6_write_envelope_errors.py  f21_tc7_config_not_implemented.py  f21_tc8_regression.py  f21_tc9_notice_id_stability.py  (+31 more)
(+172 files in other folders)
